Updated contact section and minor style fixes

--- a/deluxe.html
+++ b/deluxe.html
@@ -199,8 +199,8 @@
     <!-- Right -->
     <div class="footer-right">
       <a href="mailto:soho-suites@soho-suites.com">Email</a>
-      <li>WhatsApp: <a href="https://wa.me/38971225555" target="_blank" rel="noopener">+389 71 225 555</a></li>
-      <li>Instagram: <a href="https://www.instagram.com/soho.suites_skopje" target="_blank" rel="noopener">Soho Suites</a></li>
+      <a href="https://wa.me/38971225555" target="_blank" rel="noopener">WhatsApp</a>
+      <a href="https://www.instagram.com/soho.suites_skopje" target="_blank" rel="noopener">Instagram</a>
       <a href="https://www.booking.com/hotel/mk/grand-central-apartment.en-gb.html" target="_blank" rel="noopener">Booking.com</a>
     </div>
 
