Update book button

--- a/deluxe.html
+++ b/deluxe.html
@@ -207,6 +207,12 @@
   </div>
   <div class="footer-bottom">© <span id="year"></span> Soho Suites — Skopje</div>
 </footer>
+
+  <!-- Mobile FAB: Book Now (mobile only) -->
+  <a class="book-fab" href="contact.html" target="_self" aria-label="Book now">Book Now</a>
+<!-- put this just before </body> -->
+
+
   <script>
     const burger = document.querySelector('.burger');
     const menu   = document.querySelector('.menu');
@@ -232,7 +238,7 @@
   
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-  
+ 
  
   
   <script>
