--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <a href="sauna.html" class="suite-title-btn">Sauna Suite</a>
             <p>Step into the Sauna Suite, where sophistication and serenity create your private spa escape.</p>
             <ul class="tags">
-              <li>Private Sauna</li><li>Signature Comfort</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
+              <li>Private Sauna</li><li>One Queen Bed</li><li>Signature Comfort</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
             <a class="btn small" href="#contact">Book now</a>
           </div>
@@ -181,7 +181,7 @@
   <!-- Gallery -->
 <section id="story" class="visual-story section fade-in">
   <div class="container narrow">
-    <h2 class="h2 center">The Soho Suites Story</h2>
+    <h2 class="h2 center">Soho Suites Gallery</h2>
     <p class="center sub">Calm textures, softened light, and modern serenity—right in Skopje Centre.</p>
   </div>
 
@@ -506,8 +506,10 @@
 
   
   <!-- Mobile FAB: Book Now (mobile only) -->
-  <a class="book-fab" href="https://www.booking.com/hotel/mk/grand-central-apartment.en-gb.html?aid=304142" target="_blank" rel="noopener" aria-label="Book now">Book Now</a>
+  <a class="book-fab" href="contact.html" target="_self" aria-label="Book now">Book Now</a>
 <!-- put this just before </body> -->
+
+
 <script>
   (function(){
     const targets = document.querySelectorAll('.vs-block');
