--- a/sauna.html
+++ b/sauna.html
@@ -54,7 +54,7 @@
 
     <!-- Elegant highlight chips -->
     <ul class="sauna-chips" aria-label="Key highlights">
-      <li>Queen Beds</li>
+      <li>Queen Bed</li>
       <li>Premium Linen & Towels</li>
       <li>Smart TV + Wi-Fi</li>
       <li>Fully Equipped Kitchen</li>
@@ -206,6 +206,9 @@
   <div class="footer-bottom">© <span id="year"></span> Soho Suites — Skopje</div>
 </footer>
 
+  <!-- Mobile FAB: Book Now (mobile only) -->
+  <a class="book-fab" href="contact.html" target="_self" aria-label="Book now">Book Now</a>
+<!-- put this just before </body> -->
 
 
 
