--- a/superior.html
+++ b/superior.html
@@ -207,6 +207,9 @@
   </footer>
 
 
+  <!-- Mobile FAB: Book Now (mobile only) -->
+  <a class="book-fab" href="contact.html" target="_self" aria-label="Book now">Book Now</a>
+<!-- put this just before </body> -->
 
 
   <script>
