--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       </address>
 
       <div class="cta">
-        <a class="btn" href="https://maps.app.goo.gl/QVhGMmSLvZNiN4n8A" target="_blank" rel="noopener">Open in Google Maps</a>
+        <a class="btn" href="https://maps.app.goo.gl/7T9GKRwvYmFTiWUCA?g_st=ipc" target="_blank" rel="noopener">Open in Google Maps</a>
         <a class="btn ghost" href="https://maps.app.goo.gl/QVhGMmSLvZNiN4n8A" target="_blank" rel="noopener">Apple Maps</a>
       </div>
 
