--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph for rich shares -->
   <meta property="og:title" content="Soho Suites — Skopje Center">
   <meta property="og:description" content="Minimalist luxury apartments steps from Macedonia Square.">
-  <meta property="og:image" content="images/Main Photo1.jpg">
+  <meta property="og:image" content="images/Main Photo1.JPG">
   <meta property="og:type" content="website">
 
 
@@ -123,7 +123,7 @@
         </article>
   
         <article class="card">
-          <img src="images/sauna/Sauna9.jpg" alt="Sauna Suite — private sauna" loading="lazy" decoding="async">
+          <img src="images/sauna/Sauna9.JPG" alt="Sauna Suite — private sauna" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="sauna.html" class="suite-title-btn">Sauna Suite</a>
             <p>Step into the Sauna Suite, where sophistication and serenity create your private spa escape.</p>
@@ -188,27 +188,27 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/sauna/Sauna1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna1.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.6.jpg" alt="Private Finnish sauna">
+      <img src="images/superior/Bedroom1.6.JPG" alt="Private Finnish sauna">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom2.1.jpg" alt="Refined bedroom with premium linen">
+      <img src="images/deluxe/Bedroom2.1.JPG" alt="Refined bedroom with premium linen">
       <figcaption>Deluxe Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen2.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Kitchen2.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Deluxe Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.1.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Bedroom2.1.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
@@ -243,17 +243,17 @@
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna11.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna11.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Living_Room1.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna3.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna3.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
@@ -263,7 +263,7 @@
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/deluxe/Kitchen1.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Deluxe Suite</figcaption>
     </figure>
 
