--- a/deluxe.html
+++ b/deluxe.html
@@ -31,7 +31,7 @@
   <!-- Hero -->
   <section class="hero small-hero">
     <div class="hero-media">
-      <img src="images/deluxe/Main_Photo2.jpg" alt="Deluxe Suite — living area">
+      <img src="images/deluxe/Main_Photo2.JPG" alt="Deluxe Suite — living area">
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -104,12 +104,12 @@
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom1.2.jpg" alt="Private Finnish sauna">
+      <img src="images/deluxe/Bedroom1.2.JPG" alt="Private Finnish sauna">
       <figcaption>Calm light, quiet mornings</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom1.5.jpg" alt="Private Finnish sauna">
+      <img src="images/deluxe/Bedroom1.5.JPG" alt="Private Finnish sauna">
       <figcaption>Where comfort meets calm design.</figcaption>
     </figure>
 
