--- a/sauna.html
+++ b/sauna.html
@@ -31,7 +31,7 @@
   <!-- Hero -->
   <section class="hero small-hero">
     <div class="hero-media">
-      <img src="images/sauna/Sauna9.jpg" alt="sauna Suite — living area">
+      <img src="images/sauna/Sauna9.JPG" alt="sauna Suite — living area">
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -97,7 +97,7 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/sauna/Sauna11.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna11.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Private spa, crafted serenity.</figcaption>
     </figure>
 
@@ -112,12 +112,12 @@
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna9.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Sauna9.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Your personal sanctuary of heat.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Living_Room1.JPG" alt="Warm living room, layered neutrals">
       <figcaption>Living in balance and calm.</figcaption>
     </figure>
 
@@ -132,47 +132,47 @@
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room4.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Living_Room4.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Drift into quiet luxury.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room5.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Living_Room5.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Soft neutrals, effortless elegance.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room7.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Living_Room7.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Light wood, layered textures.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room8.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Living_Room8.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Coffee, calm, and conversation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room9.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Living_Room9.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Tranquility in every detail.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Kitchen1.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Kitchen1.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Crafted for slow mornings.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Kitchen3.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Kitchen3.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Morning coffee, minimal details.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Toilet3.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Toilet3.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Clean lines, pure relaxation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Toilet4.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/Toilet4.JPG" alt="Minimal kitchen and coffee corner">
       <figcaption>Serenity through every detail.</figcaption>
     </figure>
 
