--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <article class="card">
           <img src="images/deluxe/Main_Photo2.JPG" alt="Deluxe Suite — living area" loading="lazy" decoding="async">
           <div class="card-body center">
-            <a href="deluxe.html" class="suite-title-btn">Deluxe Suite</a>
+            <a href="deluxe.html" class="suite-title-btn">Explore Deluxe Suite</a>
             <p>Soft neutrals, elegant finishes, and a serene sense of modern comfort.</p>
             <ul class="tags">
               <li>Two Queen Beds</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
@@ -125,7 +125,7 @@
         <article class="card">
           <img src="images/sauna/Sauna9.JPG" alt="Sauna Suite — private sauna" loading="lazy" decoding="async">
           <div class="card-body center">
-            <a href="sauna.html" class="suite-title-btn">Sauna Suite</a>
+            <a href="sauna.html" class="suite-title-btn">Explore Sauna Suite</a>
             <p>Step into the Sauna Suite, where sophistication and serenity create your private spa escape.</p>
             <ul class="tags">
               <li>Private Sauna</li><li>One Queen Bed</li><li>Signature Comfort</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
@@ -137,7 +137,7 @@
         <article class="card">
           <img src="images/superior/Main_Photo1.JPG" alt="Superior Suite — bedroom" loading="lazy" decoding="async">
           <div class="card-body center">
-            <a href="superior.html" class="suite-title-btn">Superior Suite</a>
+            <a href="superior.html" class="suite-title-btn">Explore Superior Suite</a>
             <p>Refined design, two serene bedrooms, and generous space for longer stays.</p>
             <ul class="tags">
               <li>Two Queen Beds</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
