--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <img src="images/deluxe/Main_Photo2.JPG" alt="Deluxe Suite — living area" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="deluxe.html" class="suite-title-btn">Explore Deluxe Suite</a>
-            <p>Soft neutrals, elegant finishes, and a serene sense of modern comfort.</p>
+            <p>55m² of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries</p>
             <ul class="tags">
               <li>Two Queen Beds</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
@@ -126,7 +126,7 @@
           <img src="images/sauna/Sauna9.JPG" alt="Sauna Suite — private sauna" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="sauna.html" class="suite-title-btn">Explore Sauna Suite</a>
-            <p>Step into the Sauna Suite, where sophistication and serenity create your private spa escape.</p>
+            <p>45m² luxury retreat featuring a private sauna, elegant bedroom, open living and dining area, modern kitchen, and bathroom with premium toiletries</p>
             <ul class="tags">
               <li>Private Sauna</li><li>One Queen Bed</li><li>Signature Comfort</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
@@ -138,7 +138,7 @@
           <img src="images/superior/Main_Photo1.JPG" alt="Superior Suite — bedroom" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="superior.html" class="suite-title-btn">Explore Superior Suite</a>
-            <p>Refined design, two serene bedrooms, and generous space for longer stays.</p>
+            <p>60m² of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries</p>
             <ul class="tags">
               <li>Two Queen Beds</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
