--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <a href="sauna.html" class="suite-title-btn">Explore Sauna Suite</a>
             <p>45m² luxury retreat featuring a private sauna, elegant bedroom, open living and dining area, modern kitchen, and bathroom with premium toiletries</p>
             <ul class="tags">
-              <li>Private Sauna</li><li>One Queen Bed</li><li>Signature Comfort</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
+              <li>Private Sauna</li><li>One Queen Bed</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
             <a class="btn small" href="#contact">Book now</a>
           </div>
