--- a/deluxe.html
+++ b/deluxe.html
@@ -48,7 +48,7 @@
     <header class="deluxe-head">
       <h2 class="h2">Deluxe Suite — Modern Luxury</h2>
       <p class="lead">
-        Calm, curated design for up to 4 guests (≈55 m²). Soft neutrals, premium finishes, and hotel-grade comfort — in Skopje City Centre.
+        Calm, curated design for up to 4 guests. (≈55 m²) of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries — in Skopje City Centre.
       </p>
     </header>
 
