--- a/sauna.html
+++ b/sauna.html
@@ -48,7 +48,7 @@
     <header class="sauna-head">
       <h2 class="h2">Sauna Suite — Modern Luxury</h2>
       <p class="lead">
-        The Sauna Suite — a calm retreat of modern elegance and private spa indulgence — in Skopje City Centre.
+        45m² luxury retreat featuring a private sauna, elegant bedroom, open living and dining area, modern kitchen, and bathroom with premium toiletries — in Skopje City Centre.
       </p>
     </header>
 
