--- a/superior.html
+++ b/superior.html
@@ -93,7 +93,7 @@
  <section id="story" class="visual-story section fade-in">
   <div class="container narrow">
     <h2 class="h2 center">Superior Suite Gallery</h2>
-    <p class="center sub">Calm textures, softened light, and modern serenity—right in Skopje Centre.</p>
+    <p class="center sub">60m² of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries — in Skopje City Centre.</p>
   </div>
 
   <!-- add class "lux" -->
