--- a/superior.html
+++ b/superior.html
@@ -31,7 +31,7 @@
   <!-- Hero -->
   <section class="hero small-hero">
     <div class="hero-media">
-      <img src="images/deluxe/Main_Photo2.JPG" alt="Deluxe Suite — living area">
+      <img src="images/deluxe/Main_Photo2.jpg" alt="Deluxe Suite — living area">
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -99,33 +99,33 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/superior/Licing_Room1.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/superior/Licing_Room1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Warm mornings, layered neutrals.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room2.JPG" alt="Private Finnish sauna">
+      <img src="images/superior/Living_Room2.jpg" alt="Private Finnish sauna">
       <figcaption>Gentle light, perfect stillness.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room8.JPG" alt="Refined bedroom with premium linen">
+      <img src="images/superior/Living_Room8.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Where comfort meets calm design.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room4.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Living_Room4.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Calm light, quiet mornings.</figcaption>
     </figure>
 
 
     <figure class="vs-block">
-      <img src="images/superior/Kitchen2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Kitchen2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Morning coffee, minimal details.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room7.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Living_Room7.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Light wood, layered textures.</figcaption>
     </figure>
 
@@ -134,42 +134,42 @@
 
     
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.1.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/superior/Bedroom1.1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Warm mornings, layered neutrals.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.2.JPG" alt="Private Finnish sauna">
+      <img src="images/superior/Bedroom1.2.jpg" alt="Private Finnish sauna">
       <figcaption>Premium linen, deep rest.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.6.JPG" alt="Refined bedroom with premium linen">
+      <img src="images/superior/Bedroom1.6.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Premium linen, deep rest.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Bedroom2.1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Gentle light, perfect stillness.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.6.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Bedroom2.6.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Sleep wrapped in serenity.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Toilet1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Clean lines, pure relaxation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Toilet2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Minimal form, indulgent essence.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet1.3.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Toilet1.3.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>A sanctuary of calm design.</figcaption>
     </figure>
 
