--- a/deluxe.html
+++ b/deluxe.html
@@ -31,7 +31,7 @@
   <!-- Hero -->
   <section class="hero small-hero">
     <div class="hero-media">
-      <img src="images/deluxe/Main_Photo2.JPG" alt="Deluxe Suite — living area">
+      <img src="images/deluxe/Main_Photo2.jpg" alt="Deluxe Suite — living area">
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -99,82 +99,82 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom1.4.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/deluxe/Bedroom1.4.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Premium linen, deep rest.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom1.2.JPG" alt="Private Finnish sauna">
+      <img src="images/deluxe/Bedroom1.2.jpg" alt="Private Finnish sauna">
       <figcaption>Calm light, quiet mornings</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom1.5.JPG" alt="Private Finnish sauna">
+      <img src="images/deluxe/Bedroom1.5.jpg" alt="Private Finnish sauna">
       <figcaption>Where comfort meets calm design.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom2.5.JPG" alt="Refined bedroom with premium linen">
+      <img src="images/deluxe/Bedroom2.5.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Calm light, quiet mornings.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom2.1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Bedroom2.1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Premium linen, deep rest</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom2.7.JPG" alt="Refined bedroom with premium linen">
+      <img src="images/deluxe/Bedroom2.7.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Designed for slow mornings.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Living_Room1.JPG" alt="Refined bedroom with premium linen">
+      <img src="images/deluxe/Living_Room1.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Modern comfort, timeless ease.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Living_Room5.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Living_Room5.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Living in balance and calm.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen3.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Kitchen3.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Light wood, layered textures.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Kitchen2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Morning coffee, minimal details.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Main_Photo1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Main_Photo1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Tranquility in every detail.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Main_Photo2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Main_Photo2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Serenity framed in warm tones.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Kitchen1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Simple pleasures, refined taste.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Dining Room1.1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Dining Room1.1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Coffee, calm, and conversation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Toilet5.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Toilet5.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Minimal form, indulgent essence.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Toilet4.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Toilet4.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Clean lines, pure relaxation.</figcaption>
     </figure>
 
