--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Open Graph for rich shares -->
   <meta property="og:title" content="Soho Suites — Skopje Center">
   <meta property="og:description" content="Minimalist luxury apartments steps from Macedonia Square.">
-  <meta property="og:image" content="images/Main Photo1.JPG">
+  <meta property="og:image" content="images/Main Photo1.jpg">
   <meta property="og:type" content="website">
 
 
@@ -52,7 +52,7 @@
   <section id="home" class="hero fade-in">
     <div class="hero-media">
       <!-- Replace with your photo: ~1920x1080 recommended -->
-      <img src="images/superior/Main_Photo2.JPG" alt="Soho Suites — minimalist luxury interior in Skopje Center" fetchpriority="high" decoding="async">
+      <img src="images/superior/Main_Photo2.jpg" alt="Soho Suites — minimalist luxury interior in Skopje Center" fetchpriority="high" decoding="async">
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -90,7 +90,7 @@
 
     <div class="about-photo">
       <img
-        src="images/deluxe/Bedroom2.1.JPG"
+        src="images/deluxe/Bedroom2.1.jpg"
         alt="Soho Suites — calm, beige-toned bedroom with premium linen"
         loading="lazy"
         decoding="async"
@@ -111,7 +111,7 @@
   
       <div class="cards">
         <article class="card">
-          <img src="images/deluxe/Main_Photo2.JPG" alt="Deluxe Suite — living area" loading="lazy" decoding="async">
+          <img src="images/deluxe/Main_Photo2.jpg" alt="Deluxe Suite — living area" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="deluxe.html" class="suite-title-btn">Explore Deluxe Suite</a>
             <p>55m² of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries</p>
@@ -123,7 +123,7 @@
         </article>
   
         <article class="card">
-          <img src="images/sauna/Sauna9.JPG" alt="Sauna Suite — private sauna" loading="lazy" decoding="async">
+          <img src="images/sauna/Sauna9.jpg" alt="Sauna Suite — private sauna" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="sauna.html" class="suite-title-btn">Explore Sauna Suite</a>
             <p>45m² luxury retreat featuring a private sauna, elegant bedroom, open living and dining area, modern kitchen, and bathroom with premium toiletries</p>
@@ -135,7 +135,7 @@
         </article>
   
         <article class="card">
-          <img src="images/superior/Main_Photo1.JPG" alt="Superior Suite — bedroom" loading="lazy" decoding="async">
+          <img src="images/superior/Main_Photo1.jpg" alt="Superior Suite — bedroom" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="superior.html" class="suite-title-btn">Explore Superior Suite</a>
             <p>60m² of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries</p>
@@ -188,82 +188,82 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/sauna/Sauna1.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.6.JPG" alt="Private Finnish sauna">
+      <img src="images/superior/Bedroom1.6.jpg" alt="Private Finnish sauna">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Bedroom2.1.JPG" alt="Refined bedroom with premium linen">
+      <img src="images/deluxe/Bedroom2.1.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Deluxe Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/deluxe/Kitchen2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Deluxe Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Bedroom2.1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Bedroom1.2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.6.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Bedroom2.6.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Kitchen2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Kitchen2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Living_Room2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room8.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Living_Room8.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet1.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Toilet1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna11.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna11.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room1.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Living_Room1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna3.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/Sauna3.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Sauna Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet2.JPG" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/Toilet2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Superior Suite</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/deluxe/Kitchen1.JPG" alt="Warm living room, layered neutrals">
+      <img src="images/deluxe/Kitchen1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Deluxe Suite</figcaption>
     </figure>
 
