--- a/sauna.html
+++ b/sauna.html
@@ -31,7 +31,7 @@
   <!-- Hero -->
   <section class="hero small-hero">
     <div class="hero-media">
-      <img src="images/sauna/Sauna9.jpg" alt="sauna Suite — living area">
+      <img src="images/sauna/sauna9.jpg" alt="sauna Suite — living area">
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
@@ -97,82 +97,82 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/sauna/Sauna11.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/sauna11.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Private spa, crafted serenity.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna6.jpg" alt="Private Finnish sauna">
+      <img src="images/sauna/sauna6.jpg" alt="Private Finnish sauna">
       <figcaption>Your private Finnish sauna ritual.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna3.jpg" alt="Refined bedroom with premium linen">
+      <img src="images/sauna/sauna3.jpg" alt="Refined bedroom with premium linen">
       <figcaption>A glow that soothes the soul.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Sauna9.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/sauna9.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Your personal sanctuary of heat.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/sauna/living-room1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Living in balance and calm.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room2.jpg" alt="Private Finnish sauna">
+      <img src="images/sauna/living-room2.jpg" alt="Private Finnish sauna">
       <figcaption>Premium linen, deep rest.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room3.jpg" alt="Refined bedroom with premium linen">
+      <img src="images/sauna/living-room3.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Gentle light, perfect stillness.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room4.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/living-room4.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Drift into quiet luxury.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room5.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/living-room5.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Soft neutrals, effortless elegance.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room7.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/living-room7.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Light wood, layered textures.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room8.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/living-room8.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Coffee, calm, and conversation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Living_Room9.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/living-room9.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Tranquility in every detail.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Kitchen1.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/kitchen1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Crafted for slow mornings.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Kitchen3.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/kitchen3.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Morning coffee, minimal details.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Toilet3.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/toilet3.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Clean lines, pure relaxation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/sauna/Toilet4.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/sauna/toilet4.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Serenity through every detail.</figcaption>
     </figure>
 
