--- a/superior.html
+++ b/superior.html
@@ -99,33 +99,33 @@
   <!-- add class "lux" -->
   <div class="vs-row lux masonry">
     <figure class="vs-block">
-      <img src="images/superior/Licing_Room1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/superior/living-room1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Warm mornings, layered neutrals.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room2.jpg" alt="Private Finnish sauna">
+      <img src="images/superior/living-room2.jpg" alt="Private Finnish sauna">
       <figcaption>Gentle light, perfect stillness.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room8.jpg" alt="Refined bedroom with premium linen">
+      <img src="images/superior/living-room8.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Where comfort meets calm design.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room4.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/living-room4.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Calm light, quiet mornings.</figcaption>
     </figure>
 
 
     <figure class="vs-block">
-      <img src="images/superior/Kitchen2.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/kitchen2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Morning coffee, minimal details.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Living_Room7.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/living-room7.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Light wood, layered textures.</figcaption>
     </figure>
 
@@ -134,42 +134,42 @@
 
     
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.1.jpg" alt="Warm living room, layered neutrals">
+      <img src="images/superior/bedroom1-1.jpg" alt="Warm living room, layered neutrals">
       <figcaption>Warm mornings, layered neutrals.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.2.jpg" alt="Private Finnish sauna">
+      <img src="images/superior/bedroom1-2.jpg" alt="Private Finnish sauna">
       <figcaption>Premium linen, deep rest.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom1.6.jpg" alt="Refined bedroom with premium linen">
+      <img src="images/superior/bedroom1-6.jpg" alt="Refined bedroom with premium linen">
       <figcaption>Premium linen, deep rest.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.1.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/bedroom2-1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Gentle light, perfect stillness.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Bedroom2.6.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/bedroom2-6.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Sleep wrapped in serenity.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet1.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/toilet1.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Clean lines, pure relaxation.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet2.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/toilet2.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>Minimal form, indulgent essence.</figcaption>
     </figure>
 
     <figure class="vs-block">
-      <img src="images/superior/Toilet1.3.jpg" alt="Minimal kitchen and coffee corner">
+      <img src="images/superior/toilet1-3.jpg" alt="Minimal kitchen and coffee corner">
       <figcaption>A sanctuary of calm design.</figcaption>
     </figure>
 
