Fix image filename case and paths3

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </article>
   
         <article class="card">
-          <img src="images/superior/main_photo1.jpg" alt="Superior Suite — bedroom" loading="lazy" decoding="async">
+          <img src="images/superior/main_photo1.jpg" alt="Superior Suite — living area" loading="lazy" decoding="async">
           <div class="card-body center">
             <a href="superior.html" class="suite-title-btn">Explore Superior Suite</a>
             <p>60m² of refined comfort — two elegant bedrooms, a stylish living area, a modern kitchen with dining space, and a bathroom with premium toiletries</p>
