--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     </div>
     <div class="hero-overlay"></div>
     <div class="hero-content container">
-      <h1 class="display">Soho Suites <span>Skopje City Centre</span></h1>
+      <h1 class="display">Soho Suites</h1>
+      <h2>Skopje City Centre</h2>
       <!--<p class="lead">
         Three boutique apartments steps from Macedonia Square. Calm tones, crisp linens, curated details — and a private 
         <a href="sauna.html" class="suite-link"><strong>Sauna Suite</strong></a>.
