--- a/index.html
+++ b/index.html
@@ -166,15 +166,17 @@
       <div class="amenity"><i class="fa-solid fa-soap"></i><p>Hotel-Quality Toiletries</p></div>
       <div class="amenity"><i class="fa-solid fa-spa"></i><p>Private Sauna (available in one suite)</p></div>
       <div class="amenity"><i class="fa-solid fa-mug-saucer"></i><p>Fully Equipped Kitchen</p></div>
-      <div class="amenity"><i class="fa-solid fa-wifi"></i><p>High-Speed Wi-Fi</p></div>
+      <div class="amenity"><i class="fa-solid fa-wifi"></i><p>High-Speed Wi-Fi  </p></div>
       <div class="amenity"><i class="fa-solid fa-tv"></i><p>Smart TV & Streaming Access</p></div>
       <div class="amenity"><i class="fa-solid fa-lightbulb"></i><p>Elegant Vanity & Lighting</p></div>
       <div class="amenity"><i class="fa-solid fa-shuttle-van"></i><p>Airport Shuttle Service <small>(available upon request)</small></p></div>
-      <div class="amenity"><i class="fa-solid fa-square-parking"></i><p>Nearby Parking Options</p></div>
+      <div class="amenity"><i class="fa-solid fa-square-parking"></i><p>Nearby Parking Options <small>paid</small></p></div>
       <div class="amenity"><i class="fa-solid fa-briefcase"></i><p>Workspace for Business Travel</p></div>
       <div class="amenity"><i class="fa-solid fa-mug-hot"></i><p>Complimentary Coffee & Tea Selection</p></div>
+      <div class="amenity"><i class="fa-solid fa-shirt"></i><p>In-Suite Ironing Station</p></div>
+      <div class="amenity"><i class="fa-solid fa-wind"></i><p>Professional Hairdryer (Valera Swiss)</p></div>
+      <div class="amenity"><i class="fa-solid fa-shoe-prints"></i><p>Complimentary Slippers</p></div>
     </div>
-    
   </div>
 </section>
 
