--- a/superior.html
+++ b/superior.html
@@ -63,6 +63,7 @@
       <li>Two Workspaces</li>
       <li>Quiet A/C & Heating</li>
       <li>Hotel-Quality Toiletries</li>
+      <li>Professional Hairdryer (Valera Swiss)</li>
     </ul>
 
     <!-- Refined two-column list -->
