--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       <div class="amenity"><i class="fa-solid fa-shirt"></i><p>In-Suite Ironing Station</p></div>
       <div class="amenity"><i class="fa-solid fa-wind"></i><p>Professional Hairdryer (Valera Swiss)</p></div>
       <div class="amenity"><i class="fa-solid fa-shoe-prints"></i><p>Complimentary Slippers</p></div>
+      <div class="amenity"><i class="fa-solid fa-bottle-droplet"></i><p>Luxury Bath Essentials</p></div>
     </div>
   </div>
 </section>
