--- a/sauna.html
+++ b/sauna.html
@@ -37,7 +37,7 @@
     <div class="hero-content container">
       <h1 class="display">Sauna Suite</h1>
       <p class="lead">Up to 3 guests. 45m2</p>
-      <a href="index.html#contact" class="btn ghost">Book Your Stay</a>
+      <a href="contact.html" class="btn ghost">Book Your Stay</a>
     </div>
   </section>
 
