--- a/deluxe.html
+++ b/deluxe.html
@@ -37,7 +37,7 @@
     <div class="hero-content container">
       <h1 class="display">Deluxe Suite</h1>
       <p class="lead">Up to 4 guests. 55m2</p>
-      <a href="index.html#contact" class="btn ghost">Book Your Stay</a>
+      <a href="contact.html" class="btn ghost">Book Your Stay</a>
     </div>
   </section>
 
