--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       <div class="cta">
         <a class="btn hero-btn" href="#suites">Explore Suites</a>
-        <a class="btn ghost" href="#contact">Book Your Stay</a>
+        <a class="btn ghost" href="contact.html">Book Your Stay</a>
       </div>
     </div>
   </section>
@@ -119,7 +119,7 @@
             <ul class="tags">
               <li>Two Queen Beds</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
-            <a class="btn small" href="#contact">Book now</a>
+            <a class="btn small" href="contact.html">Book now</a>
           </div>
         </article>
   
@@ -131,7 +131,7 @@
             <ul class="tags">
               <li>Private Sauna</li><li>One Queen Bed</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
-            <a class="btn small" href="#contact">Book now</a>
+            <a class="btn small" href="contact.html">Book now</a>
           </div>
         </article>
   
@@ -143,7 +143,7 @@
             <ul class="tags">
               <li>Two Queen Beds</li><li>Fully Equipped Kitchen & Dining Area</li><li>Hotel-Quality Toiletries</li><li>Workspace</li>
             </ul>
-            <a class="btn small" href="#contact">Book now</a>
+            <a class="btn small" href="contact.html">Book now</a>
           </div>
         </article>
       </div>
